# deepwiki-open

./: .env.production  .gitignore  README.md  README.zh.md  STARTUP.md  package-lock.json  package.json
api/: api.py  bedrock_client.py  chat_runtime.py  config.py  dashscope_client.py  embed_retry.py  logging_config.py  main.py  ollama_patch.py  page_source_merge.py  project_metadata.py  pyproject.toml  rag.py  repo_branch.py  simple_chat.py  task_queue.py  task_worker.py  websocket_wiki.py  wiki_generation.py
api/config/: embedder.json  generator.json
api/mcp/: __init__.py  __main__.py  client.py  models.py  server.py  tools.py
api/tools/: embedder.py
deploy-package/: DEPLOYMENT.md  build.sh  deploy.sh  docker-compose.yml
docs/plans/: 2026-04-14-wiki-task-queue.md  2026-04-21-wiki-background-frontend-parity-plan.md  2026-04-26-current-wiki-generation-issues.md  2026-05-08-wiki-grounding-fix-plan.md  2026-05-09-handover.md
skills/deepwiki-query/: SKILL.md
src/app/: layout.tsx  page.tsx
src/components/: ConfigurationModal.tsx  Markdown.tsx  ProcessedProjects.tsx  TaskQueuePanel.tsx
src/contexts/: TaskQueueContext.tsx
src/hooks/: useProcessedProjects.ts
src/utils/: backgroundTaskGate.js  getRepoUrl.tsx  modelDefaults.js  websocketClient.ts  wikiRequestBodies.js
test/: test_deepwiki_create_task_defaults.js  test_deepwiki_http_defaults.js
tests/unit/: background_task_gate.test.mjs  conftest.py  model_defaults.test.mjs  page_request_defaults.test.mjs  test_chat_runtime.py  test_chat_runtime_rag.py  test_deepwiki_skill_http.py  test_embedder_config.py  (+9 more)
(+23 files in other folders)
